--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ nav ul li{
     width: 70%;
     border-radius: 12px;
     padding: 34px;
-    background-image: url('bg.jpg');
+    background-image: url('images/bg.jpg');
     background-repeat: no-repeat;
     background-position: 0;
     background-size: 100%;
